# markov-algorithms

./: Cargo.toml  README.md
src/: input.rs  lib.rs  scheme.rs  simple_cli.rs
src/alphabet/: mod.rs  tests.rs
src/scheme/: configuration.rs  errors.rs  formulas.rs  mod.rs  tests.rs
src/scheme/configuration/: errors.rs  tests.rs
src/scheme/formulas/: errors.rs  tests.rs
src/scheme/scheme_builder/: mod.rs  tests.rs
tests/: capitalize_the_first_word_and_quoted_text.rs  count_letters.rs
