[package]
name = "markov-algorithms"
version = "0.1.0"
edition = "2021"

[lib]
name = "markovalgorithms"
path = "src/lib.rs"

[[bin]]
name = "markovalgorithms-cli"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "*"

[dev-dependencies]
rand= "*"
