[package]
name = "markov-algorithms"
version = "0.4.6"
edition = "2021"
license = "GPL-3.0"
description = "Rust implementation of Markov algorithms."
documentation = "https://docs.rs/markov-algorithms"
repository = "https://github.com/quixoticaxis/markov-algorithms"
readme = "README.md"

[lib]
name = "markovalgorithms"
path = "src/lib.rs"

[[bin]]
name = "markovalgorithms-cli"
path = "src/simple_cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.*"
anyhow = "1.*"
ctrlc = "3.*"

[dependencies.clap]
version = "3.*"
default-features = true
features = ["derive"]

[dev-dependencies]
rand= "0.8.*"
